fix small layout bugs

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -15,9 +15,10 @@
 #area-content {}
 
 #area-footer {
-  border-top: 1px solid #CCC;
-  margin-top: 15px;
-  padding-top: 20px;
+    border-top: 1px solid #f7f7f7;
+    margin-top: 30px;
+    padding-top: 20px;
+    text-align: center;
 }
 
 .input-full {
@@ -26,7 +27,7 @@
 
 .loading {
   background: url('../images/270-32.gif') no-repeat center center;
-    height: 150px;
+  min-height: 150px;
 }
 
 .loading-14 {
